# rusty_bot

./: Cargo.toml  README.md
src/: main.rs
src/more_cmd/: botcmds.rs  help.rs  mod.rs
